
AUX_SOURCE_DIRECTORY(. SRC_LIST)

INCLUDE_DIRECTORIES(
${CMAKE_CURRENT_SOURCE_DIR}
${CMAKE_CURRENT_BINARY_DIR}
${Boost_INCLUDE_DIRS}
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})


TARGET_LINK_LIBRARIES(
${PROJECT_NAME}
${Boost_LIBRARIES}
${STORES_LIBRARIES}
${IDIOMS_LIBRARIES}
${STORES}
${IDIOMS}
)

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)


